--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.2",
-    "zod": "^3.25.64"
+    "zod": "^3.25.67"
   }
 }
